erDiagram
    SUCURSAL_F1_EAM_S1 {
        NUMERIC SUCURSAL_ID PK
        VARCHAR CLAVE
        BIT ES_TALLER
        BIT ES_VENTA
        VARCHAR NOMBRE
        FLOAT LATITUD
        FLOAT LONGITUD
        VARCHAR URL
    }

    SUCURSAL_TALLER_F1_EAM_S1 {
        NUMERIC SUCURSAL_ID PK, FK
        NUMERIC DIA_DESCANSO
        VARCHAR TELEFONO_ATENCION
    }

    SUCURSAL_VENTA_F1_EAM_S1 {
        NUMERIC SUCURSAL_ID PK, FK
        TIME HORA_APERTURA
        TIME HORA_CIERRE
    }

    LAPTOP_F1_EAM_S1 {
        NUMERIC LAPTOP_ID PK
        VARCHAR NUM_SERIE
        NUMERIC CANTIDAD_RAM
        VARCHAR CARACTERISTICAS_EXTRAS
        NUMERIC TIPO_TARJETA_VIDEO_ID FK
        NUMERIC TIPO_PROCESADOR_ID FK
        NUMERIC TIPO_ALMACENAMIENTO_ID FK
        NUMERIC TIPO_MONITOR_ID FK
        NUMERIC LAPTOP_REEMPLAZO_ID "Native"
    }

    LAPTOP_INVENTARIO_F2_EAM_S1 {
        NUMERIC LAPTOP_ID PK
        DATETIME FECHA_STATUS
        NUMERIC SUCURSAL_ID "Native"
        NUMERIC STATUS_LAPTOP_ID FK
    }

    HISTORICO_STATUS_LAPTOP_F2_EAM_S1 {
        NUMERIC HISTORICO_STATUS_LAPTOP_ID PK
        DATETIME FECHA_STATUS
        NUMERIC STATUS_LAPTOP_ID FK
        NUMERIC LAPTOP_ID "Native"
    }

    SERVICIO_LAPTOP_F1_EAM_S1 {
        NUMERIC NUM_SERVICIO PK
        NUMERIC LAPTOP_ID PK
        NUMERIC IMPORTE
        VARCHAR DIAGNOSTICO
        BLOB FACTURA
        NUMERIC SUCURSAL_ID FK
    }

    STATUS_LAPTOP {
        NUMERIC STATUS_LAPTOP_ID PK
        VARCHAR CLAVE
        VARCHAR DESCRIPCION
    }

    TIPO_PROCESADOR_R_EAM_S1 {
        NUMERIC TIPO_PROCESADOR_ID PK
        VARCHAR CLAVE
        VARCHAR DESCRIPCION
    }

    TIPO_TARJETA_VIDEO_R_EAM_S1 {
        NUMERIC TIPO_TARJETA_VIDEO_ID PK
        VARCHAR CLAVE
        VARCHAR DESCRIPCION
    }

    TIPO_ALMACENAMIENTO_R_EAM_S1 {
        NUMERIC TIPO_ALMACENAMIENTO_ID PK
        VARCHAR CLAVE
        VARCHAR DESCRIPCION
    }

    TIPO_MONITOR_R_EAM_S1 {
        NUMERIC TIPO_MONITOR_ID PK
        VARCHAR CLAVE
        VARCHAR DESCRIPCION
    }

    SUCURSAL_F1_EAM_S1 ||--o| SUCURSAL_TALLER_F1_EAM_S1 : "Subtype"
    SUCURSAL_F1_EAM_S1 ||--o| SUCURSAL_VENTA_F1_EAM_S1 : "Subtype"
    SUCURSAL_TALLER_F1_EAM_S1 ||--o{ SERVICIO_LAPTOP_F1_EAM_S1 : "performs"
    STATUS_LAPTOP ||--o{ LAPTOP_INVENTARIO_F2_EAM_S1 : "has"
    STATUS_LAPTOP ||--o{ HISTORICO_STATUS_LAPTOP_F2_EAM_S1 : "references"
    TIPO_PROCESADOR_R_EAM_S1 ||--o{ LAPTOP_F1_EAM_S1 : "has"
    TIPO_TARJETA_VIDEO_R_EAM_S1 ||--o{ LAPTOP_F1_EAM_S1 : "has"
    TIPO_ALMACENAMIENTO_R_EAM_S1 ||--o{ LAPTOP_F1_EAM_S1 : "has"
    TIPO_MONITOR_R_EAM_S1 ||--o{ LAPTOP_F1_EAM_S1 : "has"
